{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 31,
  "lineage": "275715b1-7328-b94e-8591-3ed2f046036e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:210195853677:loadbalancer/development-nginx-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "development-nginx-elb-229242589.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "development-nginx-elb",
            "idle_timeout": 60,
            "instances": [
              "i-01c6f8532130b677c",
              "i-07d382f8f90069f70"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "development-nginx-elb",
            "security_groups": [
              "sg-07de6b7108914b776"
            ],
            "source_security_group": "210195853677/nginx_elb_sg",
            "source_security_group_id": "sg-07de6b7108914b776",
            "subnets": [
              "subnet-04f81cf890f270988",
              "subnet-06161dde86d795c32"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_security_group.elb-sg",
            "aws_security_group.nginx-sg",
            "data.aws_ami.aws_linux",
            "data.aws_availability_zones.available",
            "data.template_file.public_cidrsubnet",
            "module.bucket.aws_iam_instance_profile.instance_profile",
            "module.bucket.aws_iam_role.allow_nginx_s3",
            "module.bucket.aws_iam_role_policy.allow_s3_all",
            "module.bucket.aws_s3_bucket.web_bucket",
            "module.vpc.aws_subnet.public",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2c275b42dee0b81",
            "arn": "arn:aws:ec2:us-east-1:210195853677:instance/i-07d382f8f90069f70",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globo-development-99318_nginx_profile",
            "id": "i-07d382f8f90069f70",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PluralsightKeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06c30dc022df8b49a",
            "private_dns": "ip-10-0-0-76.ec2.internal",
            "private_ip": "10.0.0.76",
            "public_ip": "18.206.118.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cdbe029c4f600246",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06161dde86d795c32",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-nginx1"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-nginx1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09427d2b1f7da75a1"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.template_file.public_cidrsubnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand",
            "aws_security_group.nginx-sg",
            "data.aws_ami.aws_linux",
            "module.bucket.aws_iam_instance_profile.instance_profile",
            "module.bucket.aws_iam_role.allow_nginx_s3",
            "module.bucket.aws_iam_role_policy.allow_s3_all",
            "module.bucket.aws_s3_bucket.web_bucket",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2c275b42dee0b81",
            "arn": "arn:aws:ec2:us-east-1:210195853677:instance/i-01c6f8532130b677c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globo-development-99318_nginx_profile",
            "id": "i-01c6f8532130b677c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PluralsightKeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e62b53bf69839487",
            "private_dns": "ip-10-0-1-61.ec2.internal",
            "private_ip": "10.0.1.61",
            "public_ip": "3.90.41.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ad57fc5379e88891",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f81cf890f270988",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-nginx2"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-nginx2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09427d2b1f7da75a1"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_ami.aws_linux",
            "data.aws_availability_zones.available",
            "data.template_file.public_cidrsubnet",
            "module.bucket.aws_iam_instance_profile.instance_profile",
            "module.bucket.aws_iam_role.allow_nginx_s3",
            "module.bucket.aws_iam_role_policy.allow_s3_all",
            "module.bucket.aws_s3_bucket.web_bucket",
            "module.vpc.aws_subnet.public",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210195853677:security-group/sg-07de6b7108914b776",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07de6b7108914b776",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_elb_sg",
            "name_prefix": "",
            "owner_id": "210195853677",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e1fdee979bcd9699"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210195853677:security-group/sg-09427d2b1f7da75a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09427d2b1f7da75a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "210195853677",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e1fdee979bcd9699"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210195853677:internet-gateway/igw-01745d89ea6901693",
            "id": "igw-01745d89ea6901693",
            "owner_id": "210195853677",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-vpc"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-vpc"
            },
            "vpc_id": "vpc-0e1fdee979bcd9699"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.template_file.public_cidrsubnet",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01745d89ea6901693",
            "id": "r-rtb-08c3da0dde1e79d9f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08c3da0dde1e79d9f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.template_file.public_cidrsubnet",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210195853677:route-table/rtb-08c3da0dde1e79d9f",
            "id": "rtb-08c3da0dde1e79d9f",
            "owner_id": "210195853677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01745d89ea6901693",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-vpc-public"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1fdee979bcd9699"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.template_file.public_cidrsubnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eac89483d0b55fe1",
            "route_table_id": "rtb-08c3da0dde1e79d9f",
            "subnet_id": "subnet-06161dde86d795c32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.template_file.public_cidrsubnet",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6af19567b1049d1",
            "route_table_id": "rtb-08c3da0dde1e79d9f",
            "subnet_id": "subnet-04f81cf890f270988"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.template_file.public_cidrsubnet",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210195853677:subnet/subnet-06161dde86d795c32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-06161dde86d795c32",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "210195853677",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-vpc-public-us-east-1a"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0e1fdee979bcd9699"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.template_file.public_cidrsubnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210195853677:subnet/subnet-04f81cf890f270988",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04f81cf890f270988",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "210195853677",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-vpc-public-us-east-1b"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-0e1fdee979bcd9699"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.template_file.public_cidrsubnet",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210195853677:vpc/vpc-0e1fdee979bcd9699",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0368938e777e7f84d",
            "default_route_table_id": "rtb-0966e8a95ea91ce6d",
            "default_security_group_id": "sg-00dd96ff02511274a",
            "dhcp_options_id": "dopt-039ee74f5af390eab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e1fdee979bcd9699",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0966e8a95ea91ce6d",
            "owner_id": "210195853677",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-vpc"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-vpc"
            }
          }
        }
      ]
    }
  ]
}